--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ notifications:
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("MLforISP"); Pkg.test("MLforISP"; coverage=true)'
 after_success:
   - julia -e julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("MLforISP")); include(joinpath("docs", "make.jl"))'  
+  - julia -e 'cd(Pkg.dir("MLforISP")); include(joinpath("docs", "make.jl"))'
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("MLforISP")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  #- julia -e 'cd(Pkg.dir("MLforISP")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
   - julia -e 'cd(Pkg.dir("MLforISP")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
