Fix CI typo (missed in previous commit, works e.g. here: https://travis-ci.org/nchaudhr/FeigenbaumUtil/jobs/234349659/config) [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ notifications:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("MLforISP"); Pkg.test("MLforISP"; coverage=true)'
 after_success:
-  - julia -e julia -e 'Pkg.add("Documenter")'
+  - julia -e 'Pkg.add("Documenter")'
   - julia -e 'cd(Pkg.dir("MLforISP")); include(joinpath("docs", "make.jl"))'
   # push coverage results to Coveralls
   #- julia -e 'cd(Pkg.dir("MLforISP")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
